Bug 796452. Add mozpasspointerevents attribute for IFRAMEs in chrome windows. r=mats